--- a/unbox_therapy/public/index.html
+++ b/unbox_therapy/public/index.html
@@ -13,6 +13,9 @@
     <link rel='stylesheet' href='/assets/css/global.css'>
     <link rel='stylesheet' href='/assets/css/bundle.css'>
 
+    <link rel='stylesheet' href="/assets/css/material.min.css" />
+    <script src="/assets/js/material.min.js"></script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel='stylesheet' href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css" />
     <link href="https://fonts.googleapis.com/css?family=Neucha&display=swap" rel="stylesheet">
     <script src="https://d3js.org/d3.v5.js"></script>
